--- a/package.json
+++ b/package.json
@@ -4,19 +4,31 @@
   "description": "frist time to created cli template by kazaf",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config ./build/webpack.prod",
+    "serve": "webpack serve --config ./build/webpack.dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kazaf",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.5",
+    "@vue/babel-preset-jsx": "^1.4.0",
+    "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.60.0",
     "sass-loader": "^13.1.0",
     "sass-resources-loader": "^2.2.5",
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.82.1",
-    "webpack-cli": "^5.1.1"
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0",
+    "webpack-merge": "^5.8.0"
   }
 }
