--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "@vue/babel-preset-jsx": "^1.4.0",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
     "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.60.0",
     "sass-loader": "^13.1.0",
     "sass-resources-loader": "^2.2.5",
+    "style-loader": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.8",
+    "thread-loader": "^4.0.1",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.82.1",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
     "webpack-merge": "^5.8.0"
